--- a/apps/car/tsconfig.json
+++ b/apps/car/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "typeRoots": ["../node_modules/@types"]
   },
   "include": ["**/*.ts"]
 }
