--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capicuarepo",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -53,6 +53,7 @@
     "@nrwl/schematics": "^8.5.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-social-button": "^1.0.4",
     "redux": "^4.0.4",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
@@ -71,7 +72,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "24.0.9",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.10.59",
     "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
