--- a/package.json
+++ b/package.json
@@ -51,10 +51,13 @@
     "@ngxs/store": "^3.5.1-dev.master-143d887",
     "@nrwl/angular": "8.5.0",
     "@nrwl/schematics": "^8.5.0",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^2.3.0",
     "ngx-social-button": "^1.0.4",
     "redux": "^4.0.4",
+    "material-design-icons": "^3.0.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
